--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -130,7 +130,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/dpskAcm71w5v8zQ8RmPmJiP31Om.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Código: Traje rojo 2024</span>
-    <span class="hidden">Después de que Santa Claus (nombre clave: Traje rojo) es secuestrado, el Jefe de Seguridad del Polo Norte debe formar equipo con el cazarrecompensas más infame del mundo en una misión trotamundos llena de acción para salvar la Navidad.</span>
+    <span class="hidden">red one 1 uno codigo Después de que Santa Claus (nombre clave: Traje rojo) es secuestrado, el Jefe de Seguridad del Polo Norte debe formar equipo con el cazarrecompensas más infame del mundo en una misión trotamundos llena de acción para salvar la Navidad.</span>
   </a>
 </li>
 <!--FIN--><!-- Doctor Strange en el multiverso de la locura -->
