--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Codigo: Traje rojo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La morgue -->
+<li>
+  <a href="../Peliculas/pelicula724.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/b5UgrFjiOAphNNSYnUKbemgQ87t.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La morgue 2016</span>
+    <span class="hidden">El dueño de una funeraria de una pequeña localidad y su hijo, que trabaja con él, reciben un día el cadáver de la víctima de un misterioso crimen: una bella joven que no tiene ninguna causa aparente de muerte. Ambos intentarán desvelar los intrigantes motivos del fallecimiento de la joven.</span>
+  </a>
+</li>
+<!--FIN--><!-- Codigo: Traje rojo -->
 <li>
   <a href="../Peliculas/pelicula723.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
