--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La morgue -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Antrum -->
+<li>
+  <a href="../Peliculas/pelicula725.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/20de4Rcmy4B0L5zyOc3Nc5F7c0D.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Antrum 2018</span>
+    <span class="hidden">En 1988, la proyección de una película resultó en la muerte de cincuenta y seis personas cuando el cine de Budapest donde tenía lugar la premiere prendió en llamas. Desde entonces, es un título maldito, marcado a fuego por la tragedia. Ahora, se ha encontrado un nuevo negativo y se está restaurando una nueva copia: la película más mortal de la historia está lista para el reestreno.</span>
+  </a>
+</li>
+<!--FIN--><!-- La morgue -->
 <li>
   <a href="../Peliculas/pelicula724.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
