--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los 33 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Together: Juntos hasta la muerte -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula727.html">
+    <img src="https://image.tmdb.org/t/p/original/pp2ho64ah9W9jCCIHavXUCuqISr.jpg" alt="Together: Juntos hasta la muerte" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Together: Juntos hasta la muerte</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Los 33 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula726.html">
     <img src="https://image.tmdb.org/t/p/original/428swQoL0VH65ixfsYxnWCJqGrG.jpg" alt="Los 33" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
