--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Together: Juntos hasta la muerte -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Doble Impacto -->
+<li>
+  <a href="../Peliculas/pelicula728.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8xoizvqv9k0Am1vNQrTHkVFXzBE.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Doble Impacto 1991</span>
+    <span class="hidden">Dos hermanos gemelos son separados al nacer debido a que sus padres fueron asesinados por Raymond Zhang de la mafia china y el ex- socio de Frank Wagner padre de los gemelos Chad y Alex. Veinticinco años después Chad uno de los gemelos, se ha criado en Los Ángeles y es instructor de artes marciales y fitness. El otro es Alex, que se crio en Hong Kong y ahora ejerce de contrabandista para poder sobrevivir. Los dos gemelos no se conocen pero al reencontrarse después de tantos años buscaran vengar la muerte de sus padres.</span>
+  </a>
+</li>
+<!--FIN--><!-- Together: Juntos hasta la muerte -->
 <li>
   <a href="../Peliculas/pelicula727.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
