--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Doble Impacto -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Duros -->
+<li>
+  <a href="../Peliculas/pelicula729.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/eucuker3bk9OhZhQMOAA764I4ol.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Duros 2005</span>
+    <span class="hidden">Patrick Sauvage (Jean-Claude Van Damme) es un ex-combatiente que formaba parte del las fuerzas especiales en la Tormenta del Desierto, combatiendo en Afganistán e Irak. Tras volver a su país es contratado para ser uno de los guardaespaldas de un ex-campeón de los pesos pesados (Razaaq Adoti) que tiene numerosos problemas con un peligroso magnate del Hip-hop (Viv Leacock). Sauvage crea entonces un grupo de veteranos de combate para proteger al boxeador y a su familia, pero todo se complica cuando la hermana del peso pesado (Vivica A. Fox) se enamora de su protector...</span>
+  </a>
+</li>
+<!--FIN--><!-- Doble Impacto -->
 <li>
   <a href="../Peliculas/pelicula728.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
