--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Frozen 2 -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Shaolin Soccer -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula749.html">
+    <img src="https://image.tmdb.org/t/p/original/gMqHA1CoURwncG1iKBukFtTCSrG.jpg" alt="Shaolin Soccer" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Shaolin Soccer</div>
+  <div class="text-xs text-white/70">2001</div>
+</article><!-- Frozen 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula746.html">
     <img src="https://image.tmdb.org/t/p/original/jnFCk7qGGWop2DgfnJXeKLZFuBq.jpg" alt="Frozen 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
