--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Shaolin Soccer -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla y Kong: El nuevo imperio -->
+<li>
+  <a href="../Peliculas/pelicula750.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/2YqZ6IyFk7menirwziJvfoVvSOh.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Godzilla y Kong: El nuevo imperio 2024</span>
+    <span class="hidden">Una aventura cinematográfica completamente nueva, que enfrentará al todopoderoso Kong y al temible Godzilla contra una colosal amenaza desconocida escondida dentro de nuestro mundo. La nueva y épica película profundizará en las historias de estos titanes, sus orígenes y los misterios de Isla Calavera y más allá, mientras descubre la batalla mítica que ayudó a forjar a estos seres extraordinarios y los unió a la humanidad para siempre.</span>
+  </a>
+</li>
+<!--FIN--><!-- Shaolin Soccer -->
 <li>
   <a href="../Peliculas/pelicula749.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
