--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Godzilla 1 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- King Kong contra Godzilla -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula752.html">
+    <img src="https://image.tmdb.org/t/p/original/m5x0lEpwN5m0VDvpdKeLESXspgf.jpg" alt="King Kong contra Godzilla" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">King Kong contra Godzilla</div>
+  <div class="text-xs text-white/70">1962</div>
+</article><!-- Godzilla 1 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula751.html">
     <img src="https://image.tmdb.org/t/p/original/mu4KeHb8GOjKbZGIeE4C5dXBx9B.jpg" alt="Godzilla 1" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
