--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El hijo de Godzilla -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla Minus One -->
+<li>
+  <a href="../Peliculas/pelicula756.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/q35kdC8ci9Fm2gVQazJdsohtGpD.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Godzilla Minus One 2023</span>
+    <span class="hidden">En el Japón de la posguerra surge un nuevo terror. ¿Podrán sobrevivir las personas devastadas... y mucho menos defenderse?</span>
+  </a>
+</li>
+<!--FIN--><!-- El hijo de Godzilla -->
 <li>
   <a href="../Peliculas/pelicula755.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
