--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla Minus One -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla 2: El rey de los Monstruos -->
+<li>
+  <a href="../Peliculas/pelicula757.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/yQ59NPwzHE2XlYwU2VwHF9Wb0IJ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Godzilla 2: El rey de los Monstruos 2019</span>
+    <span class="hidden">Los criptozoólogos de la agencia Monarch se enfrentan a un grupo de enormes monstruos: Godzilla, Mothra, Rodan y el enemigo de la humanidad, King Ghidorah. Estas antiguas criaturas harán todo lo posible por sobrevivir, poniendo en riesgo la existencia del ser humano en el planeta.</span>
+  </a>
+</li>
+<!--FIN--><!-- Godzilla Minus One -->
 <li>
   <a href="../Peliculas/pelicula756.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
