--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -80,7 +80,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El hijo de Godzilla -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Las Aventuras de Pinocho -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula758.html">
+    <img src="https://image.tmdb.org/t/p/original/rGPFPkUmPam6arT22ey8jWpKzL2.jpg" alt="Las Aventuras de Pinocho" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Las Aventuras de Pinocho</div>
+  <div class="text-xs text-white/70">1996</div>
+</article><!-- El hijo de Godzilla -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula755.html">
     <img src="https://image.tmdb.org/t/p/original/5xWpZ1wKoXmnLpRVevvvMbg2IMZ.jpg" alt="El hijo de Godzilla" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
