--- a/Categorias/fantasia/index.html
+++ b/Categorias/fantasia/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- King Kong contra Godzilla -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Las Aventuras de Pinocho -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula758.html">
+    <img src="https://image.tmdb.org/t/p/original/rGPFPkUmPam6arT22ey8jWpKzL2.jpg" alt="Las Aventuras de Pinocho" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Las Aventuras de Pinocho</div>
+  <div class="text-xs text-white/70">1996</div>
+</article><!-- King Kong contra Godzilla -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula752.html">
     <img src="https://image.tmdb.org/t/p/original/m5x0lEpwN5m0VDvpdKeLESXspgf.jpg" alt="King Kong contra Godzilla" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
