--- a/Categorias/accion/index.html
+++ b/Categorias/accion/index.html
@@ -75,7 +75,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mision: Imposible 3 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mision Imposible 4: Protocolo fantasma -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula771.html">
+    <img src="https://image.tmdb.org/t/p/original/y0hjsPyieqxcunEcAxb9mrrE09c.jpg" alt="Misión Imposible 4: Protocolo fantasma" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Misión Imposible 4: Protocolo fantasma</div>
+  <div class="text-xs text-white/70">2011</div>
+</article><!-- Mision: Imposible 3 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula770.html">
     <img src="https://image.tmdb.org/t/p/original/w61xBgFOfP8Z6uHKIKn1sl1TI8j.jpg" alt="Misión: Imposible 3" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
